# kicad-version-testing

./: .gitignore  CHANGELOG.md  README.md  cz.yaml  pyproject.toml  update-version.py  version-testing.kicad_pcb  version-testing.kicad_prl  version-testing.kicad_pro
